---------------------------------------------------------------------------------------
Scheduled Release 8.2602.0 (aka 2026.02) 2026-12-??
- overall improved documentation via a large set of topic updates.

- 2025-12-28: omfwd: fix RebindInterval suspension and improve UDP cleanup
  This fix ensures that forwarding actions do not experience a 30-second
  suspension when re-establishing connections as configured by
  RebindInterval. This improves maintainability and reliability.
  Impact: Eliminates unwanted action suspensions during rebinds.
  closes: https://github.com/rsyslog/rsyslog/issues/5722
- 2025-12-28: imjournal: removed unused pollfailed stats counter
  This was probably a left-over from some copy&paste when stats counters
  were initially added.
- 2025-12-26: rainerscript: add split() function
  Users need to parse delimited strings (CSV, tags, paths) into arrays
  for iteration or JSON output without external processing.
  Thanks to github user 20syldev for the patch.
- 2025-12-24: rainerscript: ensure parse_json consumes entire input string
  This fix ensures that parse_json() only succeeds if the entire input
  string is a valid JSON value. This prevents false positives when a
  non-JSON string happens to start with a valid JSON value, like a number.
  Documentation is updated to reflect this stricter validation.
  Impact: Corrects false-success in parse_json() for malformed input.
  Fixes: https://github.com/rsyslog/rsyslog/issues/4970
  With the helpo of AI-Agent: Antigravity
- 2025-12-23: imjournal: fix potential segfault (SIGBUS)
  This fixes a problem in imjournal that can result in SIGBUS or other
  problems. Note that I could not reproduce the issue myself, but it looks
  very plausible that this is indeed a useful fix.
  closes: https://github.com/rsyslog/rsyslog/issues/6359
- 2025-12-23: doc/AI: add RAG Knowledge Base extraction and build integration
  This commit adds a context-aware RAG dataset generator and integrates